--- a/views/products/product.hbs
+++ b/views/products/product.hbs
@@ -1,3 +1,8 @@
-<h1>Name: {{this.name}}</h1>
-<h2>Price: {{this.price}}</h2>
-<h3>Inventory: {{this.inventory}}</h3>
+<h1>Name: {{name}}</h1>
+<h2>Price: {{price}}</h2>
+<h3>Inventory: {{inventory}}</h3>
+<a href='{{id}}/edit'>Edit?</a>
+<form action="{{id}}?_method=DELETE" method="post">
+  <input type="hidden" name="_method" value="DELETE">
+  <input type="submit" value="Delete?">
+</form>
