--- a/views/articles/index.hbs
+++ b/views/articles/index.hbs
@@ -1,10 +1,11 @@
 <h1>Articles</h1>
-{{#each articleList}}
+{{#each articles}}
 <li>
-  {{this.title}}
+  <a href='articles/{{urltitle}}'>{{title}}</a>
   <ul>
-    <li>Author: {{this.author}}</li>
-    <p>{{this.body}}</p>
+    <li>Author: {{author}}</li>
+    <p>{{body}}</p>
   </ul>
 </li>
 {{/each}}
+<a href='articles/new'>Add new article?</a>
