--- a/views/articles/new.hbs
+++ b/views/articles/new.hbs
@@ -1,9 +1,10 @@
 <h1>New Article</h1>
+<h2>{{error}}</h2>
 <form id='editForm' action="/articles" method="post">
   Article Title:
   <input type="text" name='title' value="">
   Article Author:
-  <input type="text" name='author' value="">
+  <input type="text" name='author' value=""><br>
   Article Body:
   <input type="text" name='body' value="">
 </form>
