--- a/views/products/index.hbs
+++ b/views/products/index.hbs
@@ -1,10 +1,11 @@
 <h1>Products</h1>
-{{#each productList}}
+{{#each products}}
 <li>
-  {{this.name}}
+  <a href='products/{{id}}'>{{name}}</a>
   <ul>
-    <li>Price: {{this.price}}</li>
-    <li>Inventory: {{this.inventory}}</li>
+    <li>Price: {{price}}</li>
+    <li>Inventory: {{inventory}}</li>
   </ul>
 </li>
 {{/each}}
+<a href='products/new'>Make a new product?</a>
