--- a/views/products/new.hbs
+++ b/views/products/new.hbs
@@ -1,4 +1,5 @@
 <h1>New Product</h1>
+<h2>{{error}}</h2>
 <form id='editForm' action="/products" method="post">
   Product Name:
   <input type="text" name='name' value="">
